--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
         </activity>
         <activity android:name=".ContentProvider" />
         <activity android:name=".Register" />
-        <activity android:name=".Login"></activity>
+        <activity android:name=".Login" />
+        <activity android:name=".Galery" />
+        <activity android:name=".navigation"></activity>
     </application>
 
 </manifest>
